# stm32f4-exp

./: Cargo.toml
.cargo/: config.toml
examples/: blinky.rs  motor-exp.rs  qei.rs
