[package]
name = "stm32f4-exp"
version = "0.1.0"
authors = ["Zephyr Guo <zephyr@atomi.ai>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
log = "0.4.22"
defmt = { version = "0.3"}
defmt-rtt = "0.4"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
