[package]
name = "stm32f4-exp"
version = "0.1.0"
authors = ["Zephyr Guo <zephyr@atomi.ai>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
log = "0.4.22"
defmt = { version = "0.3"}
defmt-rtt = "0.4"
embedded-hal = "1.0"
embedded-hal-02 = {package = "embedded-hal", version = "0.2", features = ["unproven"]}
stm32f4xx-hal = {version = "0.22", default-features = false, features = ["stm32f405", "defmt"]}
stm32f4 = {version = "0.15", default-features = false, features = ["stm32f405", "rt"]}


[dev-dependencies]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
